# blue-pill

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  yaccs-user-config.cmake
libraries/: CMakeLists.txt
sources/: CMakeLists.txt
sources/src/: main.c  usbd_conf.c  usbd_desc.c
